[package]
name = "find-in-path"
authors = ["oneElectron <one.electron109@protonmail.com>"]
description = "Initialize a LaTex project inside a folder instantly"
readme = "README.md"
license = "GPL-3.0"
version = "1.0.0"
edition = "2021"

[features]
default = []
exclude_relative_paths = []
add_exe_ext = []

[[bin]]
name = "which-rs"
path = "bin/which.rs"